<resources>
    <string name="app_name">Daggerino</string>
    <string name="title">Factorial Calculator</string>
    <string name="description">You can compute a factorial using the library-kotlin module. The result will be also shown in a notification using the library-android module.</string>
    <string name="factorial_hint">Insert a number to compute his factorial</string>
    <string name="compute">Compute</string>
    <string name="snack1">Snack1</string>
    <string name="snack2">Snack2</string>
    <string name="result">Result:</string>
    <string name="notification_title">The Result is:</string>
</resources>
