<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="@dimen/doub_grid_size">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:maxLines="1"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_factorial"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/title"
        android:hint="@string/factorial_hint"
        android:importantForAutofill="no"
        android:inputType="number" />

    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_factorial"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingEnd="20dp"
            android:text="@string/result"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_result"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:maxLines="2"
            tools:text="42" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_compute"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_result"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/compute" />

    <Button
        android:id="@+id/btn_snack1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_compute"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:text="@string/snack1" />

    <Button
        android:id="@+id/btn_snack2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_compute"
        android:layout_toStartOf="@id/btn_snack1"
        android:text="@string/snack2" />

</RelativeLayout>
